@@ -38,26 +38,47 @@ static char const copyright[] =
 static char sccsid[] = "@(#)rmdir.c	8.3 (Berkeley) 4/2/94";
 #endif /* not lint */
 #endif
+#if 0
 #include <sys/cdefs.h>
 __FBSDID("$FreeBSD: src/bin/rmdir/rmdir.c,v 1.20 2005/01/26 06:51:28 ssouhlal Exp $");
+#endif
 
-#include <err.h>
+#include "err.h"
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
+#ifndef _MSC_VER
 #include <unistd.h>
+#else
+#include <malloc.h>
+#include "mscfakes.h"
+#endif 
 
-static int rm_path(char *);
-static void usage(void);
+static int rm_path(const char *);
+static int usage(void);
 
 static int pflag;
 static int vflag;
 
 int
-main(int argc, char *argv[])
+kmk_builtin_rmdir(int argc, char *argv[])
 {
 	int ch, errors;
 
+	/* reinitialize globals */
+	vflag = 0;
+	
+	/* kmk: reset getopt and set progname */
+	g_progname = argv[0];
+	opterr = 1;
+	optarg = NULL;
+	optopt = 0;
+#if defined(__FreeBSD__) || defined(__EMX__) || defined(__APPLE__)
+	optreset = 1;
+	optind = 1;
+#else
+	optind = 0; /* init */
+#endif
 	while ((ch = getopt(argc, argv, "pv")) != -1)
 		switch(ch) {
 		case 'p':
@@ -68,13 +89,13 @@ main(int argc, char *argv[])
 			break;
 		case '?':
 		default:
-			usage();
+			return usage();
 		}
 	argc -= optind;
 	argv += optind;
 
 	if (argc == 0)
-		usage();
+		return usage();
 
 	for (errors = 0; *argv; argv++) {
 		if (rmdir(*argv) < 0) {
@@ -88,15 +109,26 @@ main(int argc, char *argv[])
 		}
 	}
 
-	exit(errors);
+	return errors;
 }
 
 static int
 rm_path(char *path)
 {
 	char *p;
+	const size_t len = strlen(path);
+	p = alloca(len + 1);
+	path = memcpy(p, path, len + 1);
 
-	p = path + strlen(path);
+#if defined(_MSC_VER) || defined(__EMX__)
+	p = strchr(path, '\\');
+	while (p) {
+		*p++ = '/';
+		p = strchr(p, '\\');
+	}
+#endif 
+
+	p = path + len;
 	while (--p > path && *p == '/')
 		;
 	*++p = '\0';
@@ -107,6 +139,10 @@ rm_path(char *path)
 		*++p = '\0';
 		if (p == path)
 			break;
+#if defined(_MSC_VER) || defined(__EMX__)
+		if (p[-1] == ':' && p - 2 == path)
+			break;
+#endif 
 
 		if (rmdir(path) < 0) {
 			warn("%s", path);
@@ -119,10 +155,10 @@ rm_path(char *path)
 	return (0);
 }
 
-static void
+static int
 usage(void)
 {
 
 	(void)fprintf(stderr, "usage: rmdir [-pv] directory ...\n");
-	exit(1);
+	return 1;
 }
